--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
@@ -16,7 +17,12 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
+
+        maven {
+            url "https://maven.google.com"
+        }
     }
 }
 
